# mle_training_part_2

./: .gitignore
packaging_tutorial/: pyproject.toml
packaging_tutorial/src/PackageRajeevKumar.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
packaging_tutorial_part2/: README.md  pyproject.toml
packaging_tutorial_part2/src/Fetch_And_Load_Data/: up.py
packaging_tutorial_part2/src/Fetch_And_Load_Data.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
